# prototype

./: .gitignore  CMakeLists.txt
src/: main.cpp
